# zero-id

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  compile-output.txt
.cursor/: refactor-patterns.md  rules.md
.cursor/commands/: commit.md  refactor.md
client/src/: storage.rs
client/src/commands/: auth.rs
crates/zero-auth-auth-methods/: Cargo.toml
crates/zero-auth-auth-methods/src/: challenge.rs  errors.rs  lib.rs  mfa.rs  oauth.rs  service.rs  traits.rs  types.rs  wallet.rs
crates/zero-auth-client/: Cargo.toml  README.md  REFERENCE.md
crates/zero-auth-client/src/: main.rs  storage.rs  types.rs
crates/zero-auth-client/src/commands/: auth.rs  credentials.rs  identity.rs  machines.rs  mod.rs  recovery.rs  show.rs  tokens.rs
crates/zero-auth-crypto/: Cargo.toml
crates/zero-auth-crypto/src/: constants.rs  derivation.rs  encryption.rs  errors.rs  hashing.rs  keys.rs  lib.rs  shamir.rs  signatures.rs  utils.rs
crates/zero-auth-identity-core/: Cargo.toml
crates/zero-auth-identity-core/src/: errors.rs  lib.rs  service.rs  traits.rs  types.rs
crates/zero-auth-identity-core/src/service/: ceremonies.rs  identity.rs  machine.rs  mod.rs  namespace.rs
crates/zero-auth-integrations/: Cargo.toml
crates/zero-auth-integrations/src/: errors.rs  lib.rs  service.rs  traits.rs  types.rs  webhook.rs
crates/zero-auth-integrations/src/service/: mod.rs  sse.rs  tests.rs  webhooks.rs
crates/zero-auth-methods/: Cargo.toml
crates/zero-auth-methods/src/: challenge.rs  errors.rs  lib.rs  mfa.rs  traits.rs  types.rs  validation.rs  wallet.rs
crates/zero-auth-methods/src/oauth/: client.rs  config.rs  mod.rs
crates/zero-auth-methods/src/oauth/oidc/: discovery.rs  jwks.rs  mod.rs  nonce.rs  types.rs  validation.rs
crates/zero-auth-methods/src/oauth/providers/: epic.rs  google.rs  mod.rs  x.rs
crates/zero-auth-methods/src/service/: email.rs  machine.rs  mfa.rs  mod.rs  oauth.rs  oauth_helpers.rs  wallet.rs
crates/zero-auth-policy/: Cargo.toml
crates/zero-auth-policy/src/: engine.rs  errors.rs  evaluator.rs  lib.rs  rate_limit.rs  types.rs
crates/zero-auth-server/: Cargo.toml
crates/zero-auth-server/src/: config.rs  error.rs  extractors.rs  main.rs  middleware.rs  request_context.rs  state.rs
crates/zero-auth-server/src/api/: auth.rs  auth_wallet.rs  credentials.rs  health.rs  helpers.rs  identity.rs  integrations.rs  machines.rs  mfa.rs  mod.rs  namespaces.rs  sessions.rs
crates/zero-auth-sessions/: Cargo.toml
crates/zero-auth-sessions/src/: errors.rs  lib.rs  service.rs  tests.rs  traits.rs  types.rs
crates/zero-auth-sessions/src/service/: introspection.rs  keys.rs  lifecycle.rs  mod.rs  tokens.rs
crates/zero-auth-sessions/src/tests/: helpers.rs  jwt.rs  mod.rs  sessions.rs  types.rs
crates/zero-auth-storage/: Cargo.toml
crates/zero-auth-storage/src/: column_families.rs  errors.rs  lib.rs  rocksdb_impl.rs  traits.rs
crates/zid-crypto/src/: constants.rs  derivation.rs  lib.rs  signatures.rs
crates/zid-identity-core/src/: lib.rs  traits.rs  types.rs
crates/zid-identity-core/src/service/: identity.rs  managed.rs  mod.rs  upgrade.rs
crates/zid-methods/: Cargo.toml
crates/zid-methods/src/: types.rs  wallet.rs
crates/zid-methods/src/service/: identity_creation.rs  mod.rs  wallet.rs
crates/zid-server/src/: error.rs  main.rs
crates/zid-server/src/api/: identity.rs  identity_creation.rs  mod.rs
crates/zid-storage/src/: column_families.rs
docs/encryption/: comparison.md  quantum.md
docs/spec/v0.1.1/: 00-system-overview.md  01-crypto.md  02-storage.md  README.md
test-client/: Cargo.toml
test-client/src/: main.rs
tests/: Cargo.toml  README.md
tests/common/: server.rs
tests/integration/: identity_creation.rs  namespace_management.rs  policy_engine.rs
