[workspace]
members = [
    "crates/zero-auth-crypto",
    "crates/zero-auth-storage",
    "crates/zero-auth-policy",
    "crates/zero-auth-identity-core",
    "crates/zero-auth-methods",
    "crates/zero-auth-sessions",
    "crates/zero-auth-integrations",
    "crates/zero-auth-server",
    "crates/zero-auth-client",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Cypher Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Cryptography
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
blake3 = "1.5"
argon2 = "0.5"
password-hash = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
getrandom = "0.2"
sharks = "0.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
rocksdb = { version = "0.21", default-features = false, features = ["snappy"] }

# HTTP/Web
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"] }
hyper = "1.0"

# JWT
jsonwebtoken = "9.2"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# HMAC
hmac = "0.12"
subtle = "2.6"

# Streams
tokio-stream = "0.1"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = "0.4"

# Utilities
hex = "0.4"
base64 = "0.21"
bitflags = "2.4"

# Testing
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
