[package]
name = "zero-auth-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
# Internal crates
zero-auth-crypto = { path = "../crates/zero-auth-crypto" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"
chrono = "0.4"

[[test]]
name = "identity_creation"
path = "integration/identity_creation.rs"
harness = true
