[package]
name = "zero-auth-integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core crates
zero-auth-crypto = { path = "../zero-auth-crypto" }
zero-auth-storage = { path = "../zero-auth-storage" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# HMAC for webhook signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Constant-time comparison
subtle = "2.6"

# Error handling
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
