[package]
name = "zero-auth-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal crates
zero-auth-crypto = { path = "../zero-auth-crypto" }
zero-auth-storage = { path = "../zero-auth-storage" }
zero-auth-policy = { path = "../zero-auth-policy" }
zero-auth-identity-core = { path = "../zero-auth-identity-core" }
zero-auth-auth-methods = { path = "../zero-auth-auth-methods" }
zero-auth-sessions = { path = "../zero-auth-sessions" }
zero-auth-integrations = { path = "../zero-auth-integrations" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Tracing/Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# JWT
jsonwebtoken.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
hex.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true