[package]
name = "zero-auth-sessions"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
zero-auth-crypto = { path = "../zero-auth-crypto" }
zero-auth-storage = { path = "../zero-auth-storage" }
zero-auth-identity-core = { path = "../zero-auth-identity-core" }

# JWT
jsonwebtoken = "9"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Time
chrono = "0.4"

# Base64
base64 = "0.21"

[dev-dependencies]
tempfile = "3"
zero-auth-policy = { path = "../zero-auth-policy" }
